--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,9 @@ name: PyPI-Slack-Logger
 on:
   push:
     branches:
-      - main
+      - release
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -50,6 +52,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
+    if: startsWith(github.ref, 'refs/tags/')  # only publish to TestPyPI on tag pushes
     needs:
       - build
     runs-on: ubuntu-latest
@@ -69,26 +72,3 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
-
-  bump-version:
-    name: Bump version 🚀
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.x"
-      - name: Install bump2version
-        run: python -m pip install bump2version
-      - name: Bump version
-        run: bump2version patch
-      - name: Push changes
-        run: |
-          git config --global user.email "you@example.com"
-          git config --global user.name "Your Name"
-          git commit -am "Bump version"
-          git push
